Added verification for increaseApproval and decreaseApproval

--- a/erc20/zeppelin/zeppelin-erc20-spec.ini
+++ b/erc20/zeppelin/zeppelin-erc20-spec.ini
@@ -216,6 +216,67 @@ storage:
      orBool   VALUE >Int ALLOW
      orBool   TO_ID ==Int 0 )
 
+[increaseApproval]
+k: #execute => #halt
+callData: #abiCallData("increaseApproval", #address(SPENDER), #uint256(VALUE))
+gas: {GASCAP} => _
+refund: _ => _
+requires:
+    andBool 0 <=Int SPENDER   andBool SPENDER   <Int (2 ^Int 160)
+    andBool 0 <=Int VALUE     andBool VALUE     <Int (2 ^Int 256)
+    andBool 0 <=Int ALLOW    andBool ALLOW <Int (2 ^Int 256)
+
+[increaseApproval-success]
+statusCode: _ => EVMC_SUCCESS
+output: _ => #asByteStackInWidth(1, 32)
+log: _:List (.List => ListItem(#abiEventLog(ACCT_ID, "Approval",#indexed(#address(CALLER_ID)), #indexed(#address(SPENDER)), #uint256(ALLOW +Int VALUE))))
+storage:
+    #hashedLocation({COMPILER}, {_ALLOWANCES}, CALLER_ID SPENDER) |-> (ALLOW => ALLOW +Int VALUE)
+    _:Map
++requires:
+    andBool ALLOW +Int VALUE <Int (2 ^Int 256)
+
+[increaseApproval-failure]
+statusCode: _ => EVMC_INVALID_INSTRUCTION
+output: _ => _ 
+log: _
+storage:
+    #hashedLocation({COMPILER}, {_ALLOWANCES}, CALLER_ID SPENDER) |-> ALLOW
+    _:Map
++requires:
+    andBool ALLOW +Int VALUE >=Int (2 ^Int 256)
+
+[decreaseApproval]
+k: #execute => #halt
+callData: #abiCallData("decreaseApproval", #address(SPENDER), #uint256(VALUE))
+gas: {GASCAP} => _
+refund: _ => _
+requires:
+    andBool 0 <=Int SPENDER   andBool SPENDER   <Int (2 ^Int 160)
+    andBool 0 <=Int VALUE     andBool VALUE     <Int (2 ^Int 256)
+    andBool 0 <=Int ALLOW    andBool ALLOW <Int (2 ^Int 256)
+
+[decreaseApproval-success-1]
+statusCode: _ => EVMC_SUCCESS
+output: _ => #asByteStackInWidth(1, 32)
+log: _:List (.List => ListItem(#abiEventLog(ACCT_ID, "Approval", #indexed(#address(CALLER_ID)), #indexed(#address(SPENDER)), #uint256(0))))
+storage:
+    #hashedLocation({COMPILER}, {_ALLOWANCES}, CALLER_ID SPENDER) |-> (ALLOW => 0)
+    _:Map
++requires:
+    andBool VALUE >Int ALLOW
+
+[decreaseApproval-success-2]
+statusCode: _ => EVMC_SUCCESS
+output: _ => #asByteStackInWidth(1, 32)
+log: _:List (.List => ListItem(#abiEventLog(ACCT_ID, "Approval", #indexed(#address(CALLER_ID)), #indexed(#address(SPENDER)), #uint256(ALLOW -Int VALUE))))
+storage:
+    #hashedLocation({COMPILER}, {_ALLOWANCES}, CALLER_ID SPENDER) |-> (ALLOW => ALLOW -Int VALUE)
+    _:Map
++requires:
+    andBool VALUE <=Int ALLOW
+    andBool ALLOW -Int VALUE >=Int 0
+    
 [pgm]
 compiler: "Solidity"
 _balances: 0
