zeppelin & vyper done

--- a/erc20/vyper/vyper-erc20-constantinople-spec.ini
+++ b/erc20/vyper/vyper-erc20-constantinople-spec.ini
@@ -3,9 +3,8 @@
 
 [root]
 k: #execute => #halt
-schedule: BYZANTIUM
+schedule: CONSTANTINOPLE
 gas: {GASCAP} => _
-origStorage: _
 
 [totalSupply]
 statusCode: _ => EVMC_SUCCESS
@@ -14,6 +13,9 @@ callData: #abiCallData("totalSupply", .TypedArgs)
 log: _
 refund: _
 storage:
+    #hashedLocation({COMPILER}, {_TOTALSUPPLY}, .IntList) |-> TOTAL
+    _:Map
+origStorage:
     #hashedLocation({COMPILER}, {_TOTALSUPPLY}, .IntList) |-> TOTAL
     _:Map
 requires:
@@ -26,6 +28,9 @@ callData: #abiCallData("balanceOf", #address(OWNER))
 log: _
 refund: _
 storage:
+    #hashedLocation({COMPILER}, {_BALANCES}, OWNER) |-> BAL
+    _:Map
+origStorage:
     #hashedLocation({COMPILER}, {_BALANCES}, OWNER) |-> BAL
     _:Map
 requires:
@@ -41,6 +46,9 @@ refund: _
 storage:
     #hashedLocation({COMPILER}, {_ALLOWANCES}, OWNER SPENDER) |-> ALLOWANCE
     _:Map
+origStorage:
+    #hashedLocation({COMPILER}, {_ALLOWANCES}, OWNER SPENDER) |-> ALLOWANCE
+    _:Map
 requires:
     andBool 0 <=Int OWNER     andBool OWNER     <Int (2 ^Int 160)
     andBool 0 <=Int SPENDER   andBool SPENDER   <Int (2 ^Int 160)
@@ -53,11 +61,15 @@ callData: #abiCallData("approve", #address(SPENDER), #uint256(VALUE))
 log: _:List ( .List => ListItem(#abiEventLog(ACCT_ID, "Approval", #indexed(#address(CALLER_ID)), #indexed(#address(SPENDER)), #uint256(VALUE))) )
 refund: _ => _
 storage:
-    #hashedLocation({COMPILER}, {_ALLOWANCES}, CALLER_ID SPENDER) |-> (_:Int => VALUE)
+    #hashedLocation({COMPILER}, {_ALLOWANCES}, CALLER_ID SPENDER) |-> (INIT_VALUE => VALUE)
+    _:Map
+origStorage:
+    #hashedLocation({COMPILER}, {_ALLOWANCES}, CALLER_ID SPENDER) |-> INIT_VALUE
     _:Map
 requires:
     andBool 0 <=Int SPENDER   andBool SPENDER   <Int (2 ^Int 160)
     andBool 0 <=Int VALUE     andBool VALUE     <Int (2 ^Int 256)
+    andBool 0 <=Int INIT_VALUE     andBool INIT_VALUE     <Int (2 ^Int 256)
 
 [transfer]
 callData: #abiCallData("transfer", #address(TO_ID), #uint256(VALUE))
@@ -78,6 +90,10 @@ storage:
     #hashedLocation({COMPILER}, {_BALANCES}, CALLER_ID) |-> (BAL_FROM => BAL_FROM -Int VALUE)
     #hashedLocation({COMPILER}, {_BALANCES}, TO_ID)     |-> (BAL_TO   => BAL_TO   +Int VALUE)
     _:Map
+origStorage:
+    #hashedLocation({COMPILER}, {_BALANCES}, CALLER_ID) |-> BAL_FROM
+    #hashedLocation({COMPILER}, {_BALANCES}, TO_ID)     |-> BAL_TO
+    _:Map
 +requires:
     andBool CALLER_ID =/=Int TO_ID
     andBool VALUE <=Int BAL_FROM
@@ -85,6 +101,9 @@ storage:
 
 [transfer-success-2]
 storage:
+    #hashedLocation({COMPILER}, {_BALANCES}, CALLER_ID) |-> BAL_FROM
+    _:Map
+origStorage:
     #hashedLocation({COMPILER}, {_BALANCES}, CALLER_ID) |-> BAL_FROM
     _:Map
 +requires:
@@ -101,6 +120,10 @@ storage:
     #hashedLocation({COMPILER}, {_BALANCES}, CALLER_ID) |-> (BAL_FROM => _)
     #hashedLocation({COMPILER}, {_BALANCES}, TO_ID)     |->  BAL_TO
     _:Map
+origStorage:
+    #hashedLocation({COMPILER}, {_BALANCES}, CALLER_ID) |-> BAL_FROM
+    #hashedLocation({COMPILER}, {_BALANCES}, TO_ID)     |-> BAL_TO
+    _:Map
 +requires:
     andBool CALLER_ID =/=Int TO_ID
     andBool ( VALUE >Int BAL_FROM
@@ -108,6 +131,9 @@ storage:
 
 [transfer-failure-2]
 storage:
+    #hashedLocation({COMPILER}, {_BALANCES}, CALLER_ID) |-> BAL_FROM
+    _:Map
+origStorage:
     #hashedLocation({COMPILER}, {_BALANCES}, CALLER_ID) |-> BAL_FROM
     _:Map
 +requires:
@@ -126,7 +152,6 @@ requires:
     andBool 0 <=Int ALLOW     andBool ALLOW     <Int (2 ^Int 256)
 
 [transferFrom-success]
-k: #execute => #halt
 statusCode: _ => EVMC_SUCCESS
 output: _ => #asByteStackInWidth(1, 32)
 log: _:List ( .List => ListItem(#abiEventLog(ACCT_ID, "Transfer", #indexed(#address(FROM_ID)), #indexed(#address(TO_ID)), #uint256(VALUE))) )
@@ -136,6 +161,11 @@ storage:
     #hashedLocation({COMPILER}, {_BALANCES},   FROM_ID)           |-> (BAL_FROM => BAL_FROM -Int VALUE)
     #hashedLocation({COMPILER}, {_BALANCES},   TO_ID)             |-> (BAL_TO   => BAL_TO   +Int VALUE)
     #hashedLocation({COMPILER}, {_ALLOWANCES}, FROM_ID CALLER_ID) |-> (ALLOW    => ALLOW    -Int VALUE)
+    _:Map
+origStorage:
+    #hashedLocation({COMPILER}, {_BALANCES},   FROM_ID)           |-> BAL_FROM
+    #hashedLocation({COMPILER}, {_BALANCES},   TO_ID)             |-> BAL_TO
+    #hashedLocation({COMPILER}, {_ALLOWANCES}, FROM_ID CALLER_ID) |-> ALLOW
     _:Map
 +requires:
     andBool FROM_ID =/=Int TO_ID
@@ -147,6 +177,10 @@ storage:
 storage:
     #hashedLocation({COMPILER}, {_BALANCES},   FROM_ID)           |-> BAL_FROM
     #hashedLocation({COMPILER}, {_ALLOWANCES}, FROM_ID CALLER_ID) |-> (ALLOW => ALLOW -Int VALUE)
+    _:Map
+origStorage:
+    #hashedLocation({COMPILER}, {_BALANCES},   FROM_ID)           |-> BAL_FROM
+    #hashedLocation({COMPILER}, {_ALLOWANCES}, FROM_ID CALLER_ID) |-> ALLOW
     _:Map
 +requires:
     andBool FROM_ID ==Int TO_ID
@@ -164,6 +198,11 @@ storage:
     #hashedLocation({COMPILER}, {_BALANCES},   TO_ID)             |-> (BAL_TO   => _)  // BAL_TO
     #hashedLocation({COMPILER}, {_ALLOWANCES}, FROM_ID CALLER_ID) |-> ALLOW
     _:Map
+origStorage:
+    #hashedLocation({COMPILER}, {_BALANCES},   FROM_ID)           |-> BAL_FROM
+    #hashedLocation({COMPILER}, {_BALANCES},   TO_ID)             |-> BAL_TO
+    #hashedLocation({COMPILER}, {_ALLOWANCES}, FROM_ID CALLER_ID) |-> ALLOW
+    _:Map
 +requires:
     andBool FROM_ID =/=Int TO_ID
     andBool ( VALUE >Int BAL_FROM
@@ -172,6 +211,10 @@ storage:
 
 [transferFrom-failure-2]
 storage:
+    #hashedLocation({COMPILER}, {_BALANCES},   FROM_ID)           |-> BAL_FROM
+    #hashedLocation({COMPILER}, {_ALLOWANCES}, FROM_ID CALLER_ID) |-> ALLOW
+    _:Map
+origStorage:
     #hashedLocation({COMPILER}, {_BALANCES},   FROM_ID)           |-> BAL_FROM
     #hashedLocation({COMPILER}, {_ALLOWANCES}, FROM_ID CALLER_ID) |-> ALLOW
     _:Map
