--- a/erc20/zeppelin/zeppelin-erc20-spec.ini
+++ b/erc20/zeppelin/zeppelin-erc20-spec.ini
@@ -1,12 +1,16 @@
 ; ERC20-EVM Specification Template Parameters
 ; For more details, refer to README.md.
 
-[totalSupply]
+[root]
 k: #execute => #halt
+schedule: BYZANTIUM
+gas: {GASCAP} => _
+origStorage: _
+
+[totalSupply]
 statusCode: _ => EVMC_SUCCESS
 output: _ => #asByteStackInWidth(TOTAL, 32)
 callData: #abiCallData("totalSupply", .TypedArgs)
-gas: {GASCAP} => _
 log: _
 refund: _
 storage:
@@ -16,11 +20,9 @@ requires:
     andBool 0 <=Int TOTAL     andBool TOTAL     <Int (2 ^Int 256)
 
 [balanceOf]
-k: #execute => #halt
 statusCode: _ => EVMC_SUCCESS
 output: _ => #asByteStackInWidth(BAL, 32)
 callData: #abiCallData("balanceOf", #address(OWNER))
-gas: {GASCAP} => _
 log: _
 refund: _
 storage:
@@ -31,11 +33,9 @@ requires:
     andBool 0 <=Int BAL       andBool BAL       <Int (2 ^Int 256)
 
 [allowance]
-k: #execute => #halt
 statusCode: _ => EVMC_SUCCESS
 output: _ => #asByteStackInWidth(ALLOWANCE, 32)
 callData: #abiCallData("allowance", #address(OWNER), #address(SPENDER))
-gas: {GASCAP} => _
 log: _
 refund: _
 storage:
@@ -47,11 +47,9 @@ requires:
     andBool 0 <=Int ALLOWANCE andBool ALLOWANCE <Int (2 ^Int 256)
 
 [approve]
-k: #execute => #halt
 statusCode: _ => EVMC_SUCCESS
 output: _ => #asByteStackInWidth(1, 32)
 callData: #abiCallData("approve", #address(SPENDER), #uint256(VALUE))
-gas: {GASCAP} => _
 log: _:List ( .List => ListItem(#abiEventLog(ACCT_ID, "Approval", #indexed(#address(CALLER_ID)), #indexed(#address(SPENDER)), #uint256(VALUE))) )
 refund: _ => _
 storage:
@@ -63,7 +61,6 @@ requires:
 
 [transfer]
 callData: #abiCallData("transfer", #address(TO_ID), #uint256(VALUE))
-gas: {GASCAP} => _
 refund: _ => _
 requires:
     andBool 0 <=Int TO_ID     andBool TO_ID     <Int (2 ^Int 160)
@@ -72,7 +69,6 @@ requires:
     andBool 0 <=Int BAL_TO    andBool BAL_TO    <Int (2 ^Int 256)
 
 [transfer-success]
-k: #execute => #halt
 statusCode: _ => EVMC_SUCCESS
 output: _ => #asByteStackInWidth(1, 32)
 log: _:List ( .List => ListItem(#abiEventLog(ACCT_ID, "Transfer", #indexed(#address(CALLER_ID)), #indexed(#address(TO_ID)), #uint256(VALUE))) )
@@ -98,7 +94,6 @@ storage:
     andBool TO_ID =/=Int 0
 
 [transfer-failure]
-k: #execute => #halt
 output: _ => _
 log: _
 
@@ -135,7 +130,6 @@ storage:
 
 [transferFrom]
 callData: #abiCallData("transferFrom", #address(FROM_ID), #address(TO_ID), #uint256(VALUE))
-gas: {GASCAP} => _
 refund: _ => _
 requires:
     andBool 0 <=Int FROM_ID   andBool FROM_ID   <Int (2 ^Int 160)
@@ -146,7 +140,6 @@ requires:
     andBool 0 <=Int ALLOW     andBool ALLOW     <Int (2 ^Int 256)
 
 [transferFrom-success]
-k: #execute => #halt
 statusCode: _ => EVMC_SUCCESS
 output: _ => #asByteStackInWidth(1, 32)
 log: _:List ( .List => ListItem(#abiEventLog(ACCT_ID, "Transfer", #indexed(#address(FROM_ID)), #indexed(#address(TO_ID)), #uint256(VALUE))) )
@@ -176,7 +169,6 @@ storage:
     andBool TO_ID =/=Int 0
 
 [transferFrom-failure]
-k: #execute => #halt
 output: _ => _
 log: _
 
