--- a/erc20/hkg/hkg-erc20-constantinople-spec.ini
+++ b/erc20/hkg/hkg-erc20-constantinople-spec.ini
@@ -3,7 +3,7 @@
 
 [root]
 k: #execute => #halt
-schedule: BYZANTIUM
+schedule: CONSTANTINOPLE
 gas: {GASCAP} => _
 origStorage: _
 
@@ -50,11 +50,15 @@ callData: #abiCallData("approve", #address(SPENDER), #uint256(VALUE))
 log: _:List ( .List => ListItem(#abiEventLog(ACCT_ID, "Approval", #indexed(#address(CALLER_ID)), #indexed(#address(SPENDER)), #uint256(VALUE))) )
 refund: _ => _
 storage:
-    #hashedLocation({COMPILER}, {_ALLOWANCES}, CALLER_ID SPENDER) |-> (_:Int => VALUE)
+    #hashedLocation({COMPILER}, {_ALLOWANCES}, CALLER_ID SPENDER) |-> (INIT_VALUE => VALUE)
+    _:Map
+origStorage: 
+    #hashedLocation({COMPILER}, {_ALLOWANCES}, CALLER_ID SPENDER) |-> INIT_VALUE
     _:Map
 requires:
     andBool 0 <=Int SPENDER   andBool SPENDER   <Int (2 ^Int 160)
     andBool 0 <=Int VALUE     andBool VALUE     <Int (2 ^Int 256)
+    andBool 0 <=Int INIT_VALUE     andBool INIT_VALUE     <Int (2 ^Int 256)
 
 [transfer]
 callData: #abiCallData("transfer", #address(TO_ID), #uint256(VALUE))
@@ -75,6 +79,10 @@ storage:
     #hashedLocation({COMPILER}, {_BALANCES}, CALLER_ID) |-> (BAL_FROM => BAL_FROM -Int VALUE)
     #hashedLocation({COMPILER}, {_BALANCES}, TO_ID)     |-> (BAL_TO   => BAL_TO  +Word VALUE)
     _:Map
+origStorage: 
+    #hashedLocation({COMPILER}, {_BALANCES}, CALLER_ID) |-> BAL_FROM
+    #hashedLocation({COMPILER}, {_BALANCES}, TO_ID)     |-> BAL_TO
+    _:Map
 +requires:
     andBool CALLER_ID =/=Int TO_ID
     andBool VALUE <=Int BAL_FROM
@@ -82,6 +90,9 @@ storage:
 
 [transfer-success-2]
 storage:
+    #hashedLocation({COMPILER}, {_BALANCES}, CALLER_ID) |-> BAL_FROM
+    _:Map
+origStorage: 
     #hashedLocation({COMPILER}, {_BALANCES}, CALLER_ID) |-> BAL_FROM
     _:Map
 +requires:
@@ -99,6 +110,11 @@ storage:
     #hashedLocation({COMPILER}, {_BALANCES}, CALLER_ID) |-> (BAL_FROM => _)
     #hashedLocation({COMPILER}, {_BALANCES}, TO_ID)     |->  BAL_TO
     _:Map
+origStorage: 
+    #hashedLocation({COMPILER}, {_BALANCES}, CALLER_ID) |-> BAL_FROM
+    #hashedLocation({COMPILER}, {_BALANCES}, TO_ID)     |-> BAL_TO
+    _:Map
+
 +requires:
     andBool CALLER_ID =/=Int TO_ID
     andBool ( VALUE >Int BAL_FROM
@@ -106,6 +122,9 @@ storage:
 
 [transfer-failure-2]
 storage:
+    #hashedLocation({COMPILER}, {_BALANCES}, CALLER_ID) |-> BAL_FROM
+    _:Map
+origStorage: 
     #hashedLocation({COMPILER}, {_BALANCES}, CALLER_ID) |-> BAL_FROM
     _:Map
 +requires:
@@ -135,6 +154,11 @@ storage:
     #hashedLocation({COMPILER}, {_BALANCES},   TO_ID)             |-> (BAL_TO   => BAL_TO  +Word VALUE)
     #hashedLocation({COMPILER}, {_ALLOWANCES}, FROM_ID CALLER_ID) |-> (ALLOW    => ALLOW    -Int VALUE)
     _:Map
+origStorage:
+    #hashedLocation({COMPILER}, {_BALANCES},   FROM_ID)           |-> BAL_FROM
+    #hashedLocation({COMPILER}, {_BALANCES},   TO_ID)             |-> BAL_TO
+    #hashedLocation({COMPILER}, {_ALLOWANCES}, FROM_ID CALLER_ID) |-> ALLOW
+    _:Map
 +requires:
     andBool FROM_ID =/=Int TO_ID
     andBool VALUE <=Int BAL_FROM
@@ -145,6 +169,10 @@ storage:
 storage:
     #hashedLocation({COMPILER}, {_BALANCES},   FROM_ID)           |-> BAL_FROM
     #hashedLocation({COMPILER}, {_ALLOWANCES}, FROM_ID CALLER_ID) |-> (ALLOW => ALLOW -Int VALUE)
+    _:Map
+origStorage:
+    #hashedLocation({COMPILER}, {_BALANCES},   FROM_ID)           |-> BAL_FROM
+    #hashedLocation({COMPILER}, {_ALLOWANCES}, FROM_ID CALLER_ID) |-> ALLOW
     _:Map
 +requires:
     andBool FROM_ID ==Int TO_ID
@@ -163,6 +191,11 @@ storage:
     #hashedLocation({COMPILER}, {_BALANCES},   TO_ID)             |-> (BAL_TO   => _)  // BAL_TO
     #hashedLocation({COMPILER}, {_ALLOWANCES}, FROM_ID CALLER_ID) |-> ALLOW
     _:Map
+origStorage:
+    #hashedLocation({COMPILER}, {_BALANCES},   FROM_ID)           |-> BAL_FROM
+    #hashedLocation({COMPILER}, {_BALANCES},   TO_ID)             |-> BAL_TO
+    #hashedLocation({COMPILER}, {_ALLOWANCES}, FROM_ID CALLER_ID) |-> ALLOW
+    _:Map
 +requires:
     andBool FROM_ID =/=Int TO_ID
     andBool ( VALUE >Int BAL_FROM
@@ -174,6 +207,10 @@ storage:
     #hashedLocation({COMPILER}, {_BALANCES},   FROM_ID)           |-> BAL_FROM
     #hashedLocation({COMPILER}, {_ALLOWANCES}, FROM_ID CALLER_ID) |-> ALLOW
     _:Map
+origStorage:
+    #hashedLocation({COMPILER}, {_BALANCES},   FROM_ID)           |-> BAL_FROM
+    #hashedLocation({COMPILER}, {_ALLOWANCES}, FROM_ID CALLER_ID) |-> ALLOW
+    _:Map  
 +requires:
     andBool FROM_ID ==Int TO_ID
     andBool ( VALUE >Int BAL_FROM
