Updated hobby spec of erc20 contract to support CONSTANTINOPLE schedule

--- a/erc20/hobby/hobby-erc20-constantinople-spec.ini
+++ b/erc20/hobby/hobby-erc20-constantinople-spec.ini
@@ -3,7 +3,7 @@
 
 [root]
 k: #execute => #halt
-schedule: BYZANTIUM
+schedule: CONSTANTINOPLE
 gas: {GASCAP} => _
 origStorage: _
 
@@ -61,6 +61,9 @@ refund: _ => _
 storage:
     #hashedLocation({COMPILER}, {_ALLOWANCES}, CALLER_ID SPENDER) |-> (ALLOWANCE => VALUE)
     _:Map
+origStorage:
+    #hashedLocation({COMPILER}, {_ALLOWANCES}, CALLER_ID SPENDER) |-> ALLOWANCE
+    _:Map
 +requires:
     andBool ( VALUE ==Int 0 orBool ALLOWANCE ==Int 0 )
 
@@ -93,6 +96,10 @@ storage:
     #hashedLocation({COMPILER}, {_BALANCES}, CALLER_ID) |-> (BAL_FROM => BAL_FROM -Int VALUE)
     #hashedLocation({COMPILER}, {_BALANCES}, TO_ID)     |-> (BAL_TO   => BAL_TO   +Int VALUE)
     _:Map
+origStorage:
+    #hashedLocation({COMPILER}, {_BALANCES}, CALLER_ID) |-> BAL_FROM
+    #hashedLocation({COMPILER}, {_BALANCES}, TO_ID)     |-> BAL_TO
+    _:Map    
 +requires:
     andBool CALLER_ID =/=Int TO_ID
     andBool VALUE >Int 0
@@ -101,6 +108,9 @@ storage:
 
 [transfer-success-2]
 storage:
+    #hashedLocation({COMPILER}, {_BALANCES}, CALLER_ID) |-> BAL_FROM
+    _:Map
+origStorage:
     #hashedLocation({COMPILER}, {_BALANCES}, CALLER_ID) |-> BAL_FROM
     _:Map
 +requires:
@@ -117,6 +127,10 @@ log: _
 [transfer-failure-1]
 storage:
     #hashedLocation({COMPILER}, {_BALANCES}, CALLER_ID) |-> (BAL_FROM => _)
+    #hashedLocation({COMPILER}, {_BALANCES}, TO_ID)     |->  BAL_TO
+    _:Map
+origStorage:
+    #hashedLocation({COMPILER}, {_BALANCES}, CALLER_ID) |-> BAL_FROM
     #hashedLocation({COMPILER}, {_BALANCES}, TO_ID)     |->  BAL_TO
     _:Map
 +requires:
@@ -157,6 +171,11 @@ storage:
     #hashedLocation({COMPILER}, {_BALANCES},   TO_ID)             |-> (BAL_TO   => BAL_TO   +Int VALUE)
     #hashedLocation({COMPILER}, {_ALLOWANCES}, FROM_ID CALLER_ID) |-> (ALLOW    => ALLOW    -Int VALUE)
     _:Map
+origStorage:
+    #hashedLocation({COMPILER}, {_BALANCES},   FROM_ID)           |-> BAL_FROM 
+    #hashedLocation({COMPILER}, {_BALANCES},   TO_ID)             |-> BAL_TO   
+    #hashedLocation({COMPILER}, {_ALLOWANCES}, FROM_ID CALLER_ID) |-> ALLOW    
+    _:Map
 +requires:
     andBool FROM_ID =/=Int TO_ID
     andBool VALUE >Int 0
@@ -169,6 +188,11 @@ storage:
     #hashedLocation({COMPILER}, {_BALANCES},   FROM_ID)           |-> BAL_FROM
     #hashedLocation({COMPILER}, {_ALLOWANCES}, FROM_ID CALLER_ID) |-> (ALLOW => ALLOW -Int VALUE)
     _:Map
+origStorage:
+    #hashedLocation({COMPILER}, {_BALANCES},   FROM_ID)           |-> BAL_FROM
+    #hashedLocation({COMPILER}, {_ALLOWANCES}, FROM_ID CALLER_ID) |-> ALLOW
+    _:Map
+
 +requires:
     andBool FROM_ID ==Int TO_ID
     andBool VALUE >Int 0
@@ -185,6 +209,11 @@ log: _
 storage:
     #hashedLocation({COMPILER}, {_BALANCES},   FROM_ID)           |-> (BAL_FROM => _)  // BAL_FROM
     #hashedLocation({COMPILER}, {_BALANCES},   TO_ID)             |-> (BAL_TO   => _)  // BAL_TO
+    #hashedLocation({COMPILER}, {_ALLOWANCES}, FROM_ID CALLER_ID) |-> ALLOW
+    _:Map
+origStorage:
+    #hashedLocation({COMPILER}, {_BALANCES},   FROM_ID)           |-> BAL_FROM
+    #hashedLocation({COMPILER}, {_BALANCES},   TO_ID)             |-> BAL_TO
     #hashedLocation({COMPILER}, {_ALLOWANCES}, FROM_ID CALLER_ID) |-> ALLOW
     _:Map
 +requires:
