swapOwner-success - uncommented some ensures

--- a/gnosis-imap/gnosis-imap-spec.ini
+++ b/gnosis-imap/gnosis-imap-spec.ini
@@ -303,17 +303,37 @@ proxy_storage:
     andBool #hashedLocation({COMPILER}, {OWNERS}, OLD_OWNER)  =/=Int #hashedLocation({COMPILER}, {OWNERCOUNT}, .IntList)
     andBool #hashedLocation({COMPILER}, {OWNERS}, NEW_OWNER)  =/=Int #hashedLocation({COMPILER}, {OWNERCOUNT}, .IntList)
 ensures:
-;   ensures true
+   ensures true
 ;   andBool select(M2, #hashedLocation({COMPILER}, {OWNERS}, SENTINEL))     ==Int INIT_SENTINEL
-;   andBool select(M2, #hashedLocation({COMPILER}, {OWNERS}, PREV_OWNER))   ==Int NEW_OWNER
-;   andBool select(M2, #hashedLocation({COMPILER}, {OWNERS}, OLD_OWNER))    ==Int 0
-;   andBool select(M2, #hashedLocation({COMPILER}, {OWNERS}, NEW_OWNER))    ==Int INIT_OLD_OWNER
-;   andBool select(M2, #hashedLocation({COMPILER}, {OWNERCOUNT}, .IntList)) ==Int OWNERCOUNT
-;   andBool M1 ==IMap M2 except (
-;        SetItem(#hashedLocation({COMPILER}, {OWNERS}, NEW_OWNER))
-;        SetItem(#hashedLocation({COMPILER}, {OWNERS}, PREV_OWNER))
-;        SetItem(#hashedLocation({COMPILER}, {OWNERS}, OLD_OWNER))
-;       .Set)
+   andBool select(M2, #hashedLocation({COMPILER}, {OWNERS}, PREV_OWNER))   ==Int NEW_OWNER
+   andBool select(M2, #hashedLocation({COMPILER}, {OWNERS}, OLD_OWNER))    ==Int 0
+   andBool select(M2, #hashedLocation({COMPILER}, {OWNERS}, NEW_OWNER))    ==Int INIT_OLD_OWNER
+   andBool select(M2, #hashedLocation({COMPILER}, {OWNERCOUNT}, .IntList)) ==Int OWNERCOUNT
+   ;andBool M1 ==IMap M2 except (
+   ;     SetItem(#hashedLocation({COMPILER}, {OWNERS}, SENTINEL))
+   ;     SetItem(#hashedLocation({COMPILER}, {OWNERS}, NEW_OWNER))
+   ;     SetItem(#hashedLocation({COMPILER}, {OWNERS}, PREV_OWNER))
+   ;     SetItem(#hashedLocation({COMPILER}, {OWNERS}, OLD_OWNER))
+   ;     SetItem(#hashedLocation({COMPILER}, {OWNERS}, OWNERCOUNT))
+   ;    .Set)
+
+;[swapOwner-success-1]
+;; PREV_OWNER different from SENTINEL
+;+requires:
+;    andBool SENTINEL      =/=Int PREV_OWNER
+;    andBool INIT_SENTINEL =/=Int INIT_PREV_OWNER
+;    andBool #hashedLocation({COMPILER}, {OWNERS}, SENTINEL)   =/=Int #hashedLocation({COMPILER}, {OWNERS}, PREV_OWNER)
+;+ensures:
+;   andBool select(M2, #hashedLocation({COMPILER}, {OWNERS}, SENTINEL))     ==Int INIT_SENTINEL
+
+;[swapOwner-success-2]
+;; PREV_OWNER same as SENTINEL
+;+requires:
+;    andBool SENTINEL      ==Int PREV_OWNER
+;    andBool INIT_SENTINEL ==Int INIT_PREV_OWNER
+;    andBool #hashedLocation({COMPILER}, {OWNERS}, SENTINEL)   ==Int #hashedLocation({COMPILER}, {OWNERS}, PREV_OWNER)
+;+ensures:
+;   andBool select(M2, #hashedLocation({COMPILER}, {OWNERS}, SENTINEL))     ==Int NEW_OWNER
 
 [pgm]
 compiler: "Solidity"
