implicit no-hash-collision condition

--- a/gnosis-imap/gnosis-imap-spec.ini
+++ b/gnosis-imap/gnosis-imap-spec.ini
@@ -290,18 +290,19 @@ proxy_storage:
     andBool PREV_OWNER =/=Int OLD_OWNER  // implied from `owners[prevOwner] == oldOwner` (implying `prevOwner != oldOwner` or `prevOwner == oldOwner == SENTINEL_OWNERS`) and `oldOwner != SENTINEL_OWNERS`
     andBool PREV_OWNER =/=Int NEW_OWNER  // implied from `owners[prevOwner] == oldOwner != address(0)` and `owners[newOwner] == address(0)`
     andBool OLD_OWNER  =/=Int NEW_OWNER  // implied from `owners[prevOwner] == oldOwner` (implying `owners[oldOwner] != address(0)`) and `owners[newOwner] == address(0)`
-    ; no hash collision between different owners
-    andBool #hashedLocation({COMPILER}, {OWNERS}, SENTINEL)   =/=Int #hashedLocation({COMPILER}, {OWNERS}, PREV_OWNER)
-    andBool #hashedLocation({COMPILER}, {OWNERS}, SENTINEL)   =/=Int #hashedLocation({COMPILER}, {OWNERS}, OLD_OWNER)
-    andBool #hashedLocation({COMPILER}, {OWNERS}, SENTINEL)   =/=Int #hashedLocation({COMPILER}, {OWNERS}, NEW_OWNER)
-    andBool #hashedLocation({COMPILER}, {OWNERS}, PREV_OWNER) =/=Int #hashedLocation({COMPILER}, {OWNERS}, OLD_OWNER)
-    andBool #hashedLocation({COMPILER}, {OWNERS}, PREV_OWNER) =/=Int #hashedLocation({COMPILER}, {OWNERS}, NEW_OWNER)
-    andBool #hashedLocation({COMPILER}, {OWNERS}, OLD_OWNER)  =/=Int #hashedLocation({COMPILER}, {OWNERS}, NEW_OWNER)
-    ; no hash collision between owners and ownerCount
-    andBool #hashedLocation({COMPILER}, {OWNERS}, SENTINEL)   =/=Int #hashedLocation({COMPILER}, {OWNERCOUNT}, .IntList)
-    andBool #hashedLocation({COMPILER}, {OWNERS}, PREV_OWNER) =/=Int #hashedLocation({COMPILER}, {OWNERCOUNT}, .IntList)
-    andBool #hashedLocation({COMPILER}, {OWNERS}, OLD_OWNER)  =/=Int #hashedLocation({COMPILER}, {OWNERCOUNT}, .IntList)
-    andBool #hashedLocation({COMPILER}, {OWNERS}, NEW_OWNER)  =/=Int #hashedLocation({COMPILER}, {OWNERCOUNT}, .IntList)
+; implicit by the hash2 lemmas
+;   ; no hash collision between different owners
+;   andBool #hashedLocation({COMPILER}, {OWNERS}, SENTINEL)   =/=Int #hashedLocation({COMPILER}, {OWNERS}, PREV_OWNER)
+;   andBool #hashedLocation({COMPILER}, {OWNERS}, SENTINEL)   =/=Int #hashedLocation({COMPILER}, {OWNERS}, OLD_OWNER)
+;   andBool #hashedLocation({COMPILER}, {OWNERS}, SENTINEL)   =/=Int #hashedLocation({COMPILER}, {OWNERS}, NEW_OWNER)
+;   andBool #hashedLocation({COMPILER}, {OWNERS}, PREV_OWNER) =/=Int #hashedLocation({COMPILER}, {OWNERS}, OLD_OWNER)
+;   andBool #hashedLocation({COMPILER}, {OWNERS}, PREV_OWNER) =/=Int #hashedLocation({COMPILER}, {OWNERS}, NEW_OWNER)
+;   andBool #hashedLocation({COMPILER}, {OWNERS}, OLD_OWNER)  =/=Int #hashedLocation({COMPILER}, {OWNERS}, NEW_OWNER)
+;   ; no hash collision between owners and ownerCount
+;   andBool #hashedLocation({COMPILER}, {OWNERS}, SENTINEL)   =/=Int #hashedLocation({COMPILER}, {OWNERCOUNT}, .IntList)
+;   andBool #hashedLocation({COMPILER}, {OWNERS}, PREV_OWNER) =/=Int #hashedLocation({COMPILER}, {OWNERCOUNT}, .IntList)
+;   andBool #hashedLocation({COMPILER}, {OWNERS}, OLD_OWNER)  =/=Int #hashedLocation({COMPILER}, {OWNERCOUNT}, .IntList)
+;   andBool #hashedLocation({COMPILER}, {OWNERS}, NEW_OWNER)  =/=Int #hashedLocation({COMPILER}, {OWNERCOUNT}, .IntList)
 ensures:
    ensures true
 ;   andBool select(M2, #hashedLocation({COMPILER}, {OWNERS}, SENTINEL))     ==Int INIT_SENTINEL
