swapOwner-success - removed sentinel from storage

--- a/gnosis-imap/gnosis-imap-spec.ini
+++ b/gnosis-imap/gnosis-imap-spec.ini
@@ -238,7 +238,7 @@ output: _ => _
 statusCode: _ => EVMC_SUCCESS
 callStack: _
 this: #PROXY_ID
-msg_sender: #PROXY_ID
+msg_sender: MSG_SENDER
 callData: #abiCallData("swapOwner", (#address(PREV_OWNER),
                                      #address(OLD_OWNER),
                                      #address(NEW_OWNER)))
@@ -253,8 +253,7 @@ log: _:List ( .List => ListItem(#abiEventLog(#PROXY_ID, "RemovedOwner", #address
 refund: _ => _
 coinbase: _ => _
 proxy_storage:
-    store(store(store(store(store(M1:IMap, #hashedLocation({COMPILER}, {OWNERS}, SENTINEL),     INIT_SENTINEL),
-                                           #hashedLocation({COMPILER}, {OWNERS}, PREV_OWNER),   INIT_PREV_OWNER),
+    store(store(store(store(M1:IMap,       #hashedLocation({COMPILER}, {OWNERS}, PREV_OWNER),   INIT_PREV_OWNER),
                                            #hashedLocation({COMPILER}, {OWNERS}, OLD_OWNER),    INIT_OLD_OWNER),
                                            #hashedLocation({COMPILER}, {OWNERS}, NEW_OWNER),    INIT_NEW_OWNER),
                                            #hashedLocation({COMPILER}, {OWNERCOUNT}, .IntList), OWNERCOUNT)
@@ -262,12 +261,13 @@ proxy_storage:
 +requires:
     ; address public constant SENTINEL_OWNERS = address(0x1);
     andBool SENTINEL ==Int 1
+    ; Property to verify
+    andBool MSG_SENDER ==Int #PROXY_ID
     ; Range
     andBool #rangeAddress(  SENTINEL)
     andBool #rangeAddress(  PREV_OWNER)
     andBool #rangeAddress(  OLD_OWNER)
     andBool #rangeAddress(  NEW_OWNER)
-    andBool #rangeAddress(  INIT_SENTINEL)
     andBool #rangeAddress(  INIT_PREV_OWNER)
     andBool #rangeAddress(  INIT_OLD_OWNER)
     andBool #rangeAddress(  INIT_NEW_OWNER)
@@ -284,57 +284,22 @@ proxy_storage:
     andBool INIT_PREV_OWNER ==Int OLD_OWNER
     ; path condition
     ; All owners are different
-    andBool SENTINEL   =/=Int PREV_OWNER // TODO: consider the case of SENTINEL ==Int PREV_OWNER  (by simply commenting out this line)
-  ; andBool SENTINEL   =/=Int OLD_OWNER  // required
-  ; andBool SENTINEL   =/=Int NEW_OWNER  // required
+    ;andBool SENTINEL   =/=Int PREV_OWNER // TODO: consider the case of SENTINEL ==Int PREV_OWNER  (by simply commenting out this line)
     andBool PREV_OWNER =/=Int OLD_OWNER  // implied from `owners[prevOwner] == oldOwner` (implying `prevOwner != oldOwner` or `prevOwner == oldOwner == SENTINEL_OWNERS`) and `oldOwner != SENTINEL_OWNERS`
     andBool PREV_OWNER =/=Int NEW_OWNER  // implied from `owners[prevOwner] == oldOwner != address(0)` and `owners[newOwner] == address(0)`
     andBool OLD_OWNER  =/=Int NEW_OWNER  // implied from `owners[prevOwner] == oldOwner` (implying `owners[oldOwner] != address(0)`) and `owners[newOwner] == address(0)`
-; implicit by the hash2 lemmas
-;   ; no hash collision between different owners
-;   andBool #hashedLocation({COMPILER}, {OWNERS}, SENTINEL)   =/=Int #hashedLocation({COMPILER}, {OWNERS}, PREV_OWNER)
-;   andBool #hashedLocation({COMPILER}, {OWNERS}, SENTINEL)   =/=Int #hashedLocation({COMPILER}, {OWNERS}, OLD_OWNER)
-;   andBool #hashedLocation({COMPILER}, {OWNERS}, SENTINEL)   =/=Int #hashedLocation({COMPILER}, {OWNERS}, NEW_OWNER)
-;   andBool #hashedLocation({COMPILER}, {OWNERS}, PREV_OWNER) =/=Int #hashedLocation({COMPILER}, {OWNERS}, OLD_OWNER)
-;   andBool #hashedLocation({COMPILER}, {OWNERS}, PREV_OWNER) =/=Int #hashedLocation({COMPILER}, {OWNERS}, NEW_OWNER)
-;   andBool #hashedLocation({COMPILER}, {OWNERS}, OLD_OWNER)  =/=Int #hashedLocation({COMPILER}, {OWNERS}, NEW_OWNER)
-;   ; no hash collision between owners and ownerCount
-;   andBool #hashedLocation({COMPILER}, {OWNERS}, SENTINEL)   =/=Int #hashedLocation({COMPILER}, {OWNERCOUNT}, .IntList)
-;   andBool #hashedLocation({COMPILER}, {OWNERS}, PREV_OWNER) =/=Int #hashedLocation({COMPILER}, {OWNERCOUNT}, .IntList)
-;   andBool #hashedLocation({COMPILER}, {OWNERS}, OLD_OWNER)  =/=Int #hashedLocation({COMPILER}, {OWNERCOUNT}, .IntList)
-;   andBool #hashedLocation({COMPILER}, {OWNERS}, NEW_OWNER)  =/=Int #hashedLocation({COMPILER}, {OWNERCOUNT}, .IntList)
 ensures:
    ensures true
-;   andBool select(M2, #hashedLocation({COMPILER}, {OWNERS}, SENTINEL))     ==Int INIT_SENTINEL
    andBool select(M2, #hashedLocation({COMPILER}, {OWNERS}, PREV_OWNER))   ==Int NEW_OWNER
    andBool select(M2, #hashedLocation({COMPILER}, {OWNERS}, OLD_OWNER))    ==Int 0
    andBool select(M2, #hashedLocation({COMPILER}, {OWNERS}, NEW_OWNER))    ==Int INIT_OLD_OWNER
    andBool select(M2, #hashedLocation({COMPILER}, {OWNERCOUNT}, .IntList)) ==Int OWNERCOUNT
-   ;andBool M1 ==IMap M2 except (
-   ;     SetItem(#hashedLocation({COMPILER}, {OWNERS}, SENTINEL))
-   ;     SetItem(#hashedLocation({COMPILER}, {OWNERS}, NEW_OWNER))
-   ;     SetItem(#hashedLocation({COMPILER}, {OWNERS}, PREV_OWNER))
-   ;     SetItem(#hashedLocation({COMPILER}, {OWNERS}, OLD_OWNER))
-   ;     SetItem(#hashedLocation({COMPILER}, {OWNERS}, OWNERCOUNT))
-   ;    .Set)
-
-;[swapOwner-success-1]
-;; PREV_OWNER different from SENTINEL
-;+requires:
-;    andBool SENTINEL      =/=Int PREV_OWNER
-;    andBool INIT_SENTINEL =/=Int INIT_PREV_OWNER
-;    andBool #hashedLocation({COMPILER}, {OWNERS}, SENTINEL)   =/=Int #hashedLocation({COMPILER}, {OWNERS}, PREV_OWNER)
-;+ensures:
-;   andBool select(M2, #hashedLocation({COMPILER}, {OWNERS}, SENTINEL))     ==Int INIT_SENTINEL
-
-;[swapOwner-success-2]
-;; PREV_OWNER same as SENTINEL
-;+requires:
-;    andBool SENTINEL      ==Int PREV_OWNER
-;    andBool INIT_SENTINEL ==Int INIT_PREV_OWNER
-;    andBool #hashedLocation({COMPILER}, {OWNERS}, SENTINEL)   ==Int #hashedLocation({COMPILER}, {OWNERS}, PREV_OWNER)
-;+ensures:
-;   andBool select(M2, #hashedLocation({COMPILER}, {OWNERS}, SENTINEL))     ==Int NEW_OWNER
+   andBool M1 ==IMap M2 except (
+        SetItem(#hashedLocation({COMPILER}, {OWNERS}, NEW_OWNER))
+        SetItem(#hashedLocation({COMPILER}, {OWNERS}, PREV_OWNER))
+        SetItem(#hashedLocation({COMPILER}, {OWNERS}, OLD_OWNER))
+        SetItem(#hashedLocation({COMPILER}, {OWNERCOUNT}, .IntList))
+       .Set)
 
 [pgm]
 compiler: "Solidity"
