swapOwner failure cases

--- a/gnosis-imap/Makefile
+++ b/gnosis-imap/Makefile
@@ -9,11 +9,7 @@ SPEC_INI:=gnosis-imap-spec.ini
 KPROVE_OPTS:=--smt-prelude $(abspath $(dir $(abspath $(lastword $(MAKEFILE_LIST))))/../gnosis/evm.smt2) \
              --deterministic-functions --cache-func-optimized --halt-cells k,pc
 
-SPEC_NAMES:=encodeTransactionData-1 \
-            encodeTransactionData-2 \
-            signatureSplit-proof \
-            removeOwner-success-1 \
-            removeOwner-success-2 \
-            swapOwner-success
+SPEC_NAMES:=swapOwner-failure-2-a \
+            swapOwner-failure-2-b \
 
 include ../resources/kprove.mak
