--- a/gnosis-imap/gnosis-imap-spec.ini
+++ b/gnosis-imap/gnosis-imap-spec.ini
@@ -256,11 +256,9 @@ accounts: <account>
 ;
 ; OwnerManager
 ;
-
-[swapOwner-success]
+[swapOwner]
 k: (#execute => #halt) ~> _
 output: _ => _
-statusCode: _ => EVMC_SUCCESS
 callStack: _
 this: #PROXY_ID
 msg_sender: MSG_SENDER
@@ -273,49 +271,118 @@ localMem: .IMap => _
 pc: 0 => _
 gas: #gas(STARTGAS, 0, 0) => _
 memoryUsed: 0 => _
-log: _:List ( .List => ListItem(#abiEventLog(#PROXY_ID, "RemovedOwner", #address(OLD_OWNER)))
-                       ListItem(#abiEventLog(#PROXY_ID, "AddedOwner",   #address(NEW_OWNER))) )
 refund: _ => _
 coinbase: _ => _
 proxy_storage:
-    store(store(store(M1:IMap, #hashedLocation({COMPILER}, {OWNERS}, PREV_OWNER), INIT_PREV_OWNER),
-                               #hashedLocation({COMPILER}, {OWNERS}, OLD_OWNER),  INIT_OLD_OWNER),
-                               #hashedLocation({COMPILER}, {OWNERS}, NEW_OWNER),  INIT_NEW_OWNER)
+    store(store(store(M1:IMap, #hashedLocation({COMPILER}, {OWNERS}, PREV_OWNER),   INIT_PREV_OWNER),
+                               #hashedLocation({COMPILER}, {OWNERS}, OLD_OWNER),    INIT_OLD_OWNER),
+                               #hashedLocation({COMPILER}, {OWNERS}, NEW_OWNER),    INIT_NEW_OWNER)
     => M2:IMap
++requires:
+    ; address public constant SENTINEL_OWNERS = address(0x1);
+    andBool SENTINEL ==Int 1
+    ; Range
+    andBool #rangeAddress(  MSG_SENDER)
+    andBool #rangeAddress(  PREV_OWNER)
+    andBool #rangeAddress(  OLD_OWNER)
+    andBool #rangeAddress(  NEW_OWNER)
+    andBool #rangeAddress(  INIT_PREV_OWNER)
+    andBool #rangeAddress(  INIT_OLD_OWNER)
+    andBool #rangeAddress(  INIT_NEW_OWNER)
+ensures:
+   ensures true
+   andBool M1 ==IMap M2 except (
+        SetItem(#hashedLocation({COMPILER}, {OWNERS}, NEW_OWNER))
+        SetItem(#hashedLocation({COMPILER}, {OWNERS}, PREV_OWNER))
+        SetItem(#hashedLocation({COMPILER}, {OWNERS}, OLD_OWNER))
+       .Set)
+
+[swapOwner-success]
+statusCode: _ => EVMC_SUCCESS
+log: _:List ( .List => ListItem(#abiEventLog(#PROXY_ID, "RemovedOwner", #address(OLD_OWNER)))
+                       ListItem(#abiEventLog(#PROXY_ID, "AddedOwner",   #address(NEW_OWNER))) )
 +requires:
     ; Property to verify
     andBool MSG_SENDER ==Int #PROXY_ID
-    ; Range
-    andBool #rangeAddress(PREV_OWNER)
-    andBool #rangeAddress(OLD_OWNER)
-    andBool #rangeAddress(NEW_OWNER)
-    andBool #rangeAddress(INIT_PREV_OWNER)
-    andBool #rangeAddress(INIT_OLD_OWNER)
-    andBool #rangeAddress(INIT_NEW_OWNER)
     ; requirements from code
     ; Owner address cannot be null.
     andBool NEW_OWNER =/=Int 0
-    andBool NEW_OWNER =/=Int #SENTINEL
+    andBool NEW_OWNER =/=Int SENTINEL
     ; No duplicate owners allowed.
     andBool INIT_NEW_OWNER ==Int 0
     ; Validate oldOwner address and check that it corresponds to owner index
     andBool OLD_OWNER =/=Int 0
-    andBool OLD_OWNER =/=Int #SENTINEL
+    andBool OLD_OWNER =/=Int SENTINEL
     andBool INIT_PREV_OWNER ==Int OLD_OWNER
     ; path condition
     ; All owners are different
     andBool PREV_OWNER =/=Int OLD_OWNER  // implied from `owners[prevOwner] == oldOwner` (implying `prevOwner != oldOwner` or `prevOwner == oldOwner == SENTINEL_OWNERS`) and `oldOwner != SENTINEL_OWNERS`
     andBool PREV_OWNER =/=Int NEW_OWNER  // implied from `owners[prevOwner] == oldOwner != address(0)` and `owners[newOwner] == address(0)`
     andBool OLD_OWNER  =/=Int NEW_OWNER  // implied from `owners[prevOwner] == oldOwner` (implying `owners[oldOwner] != address(0)`) and `owners[newOwner] == address(0)`
-ensures:
-   andBool select(M2, #hashedLocation({COMPILER}, {OWNERS}, PREV_OWNER)) ==Int NEW_OWNER
-   andBool select(M2, #hashedLocation({COMPILER}, {OWNERS}, OLD_OWNER))  ==Int 0
-   andBool select(M2, #hashedLocation({COMPILER}, {OWNERS}, NEW_OWNER))  ==Int INIT_OLD_OWNER
-   andBool M1 ==IMap M2 except (
-        SetItem(#hashedLocation({COMPILER}, {OWNERS}, PREV_OWNER))
-        SetItem(#hashedLocation({COMPILER}, {OWNERS}, OLD_OWNER))
-        SetItem(#hashedLocation({COMPILER}, {OWNERS}, NEW_OWNER))
-       .Set)
++ensures:
+   ensures true
+   andBool select(M2, #hashedLocation({COMPILER}, {OWNERS}, PREV_OWNER))   ==Int NEW_OWNER
+   andBool select(M2, #hashedLocation({COMPILER}, {OWNERS}, OLD_OWNER))    ==Int 0
+   andBool select(M2, #hashedLocation({COMPILER}, {OWNERS}, NEW_OWNER))    ==Int INIT_OLD_OWNER
+
+[swapOwner-failure]
+statusCode: _ => EVMC_REVERT
+log: _
+
+[swapOwner-failure-1]
++requires:
+    ; Property to verify
+    andBool MSG_SENDER =/=Int #PROXY_ID
+
+[swapOwner-failure-2-a]
++requires:
+    ; Property to verify
+    andBool MSG_SENDER ==Int #PROXY_ID
+    ; requirements from code won't hold
+    ; Owner address cannot be null.
+    andBool (NEW_OWNER ==Int 0
+    orBool NEW_OWNER ==Int SENTINEL
+    ; No duplicate owners allowed.
+    orBool INIT_NEW_OWNER =/=Int 0
+    ; Validate oldOwner address and check that it corresponds to owner index
+    orBool OLD_OWNER ==Int 0
+    orBool OLD_OWNER ==Int SENTINEL)
+
+[swapOwner-failure-2-b-1]
++requires:
+    ; Property to verify
+    andBool MSG_SENDER ==Int #PROXY_ID
+    ; requirements from code won't hold
+    ; Owner address cannot be null.
+    andBool NEW_OWNER =/=Int 0
+    andBool NEW_OWNER =/=Int SENTINEL
+    ; No duplicate owners allowed.
+    andBool INIT_NEW_OWNER ==Int 0
+    ; Validate oldOwner address and check that it corresponds to owner index
+    andBool OLD_OWNER =/=Int 0
+    andBool OLD_OWNER =/=Int SENTINEL
+    andBool INIT_PREV_OWNER =/=Int OLD_OWNER
+    ; testing
+    andBool PREV_OWNER =/=Int OLD_OWNER  // implied from `owners[prevOwner] == oldOwner` (implying `prevOwner != oldOwner` or `prevOwner == oldOwner == SENTINEL_OWNERS`) and `oldOwner != SENTINEL_OWNERS`
+    andBool PREV_OWNER =/=Int NEW_OWNER
+
+[swapOwner-failure-2-b-2]
++requires:
+    ; Property to verify
+    andBool MSG_SENDER ==Int #PROXY_ID
+    ; requirements from code won't hold
+    ; Owner address cannot be null.
+    andBool NEW_OWNER =/=Int 0
+    andBool NEW_OWNER =/=Int SENTINEL
+    ; No duplicate owners allowed.
+    andBool INIT_NEW_OWNER ==Int 0
+    ; Validate oldOwner address and check that it corresponds to owner index
+    andBool OLD_OWNER =/=Int 0
+    andBool OLD_OWNER =/=Int SENTINEL
+    andBool INIT_PREV_OWNER =/=Int OLD_OWNER
+    ; testing
+    ;andBool PREV_OWNER ==Int OLD_OWNER  // implied from `owners[prevOwner] == oldOwner` (implying `prevOwner != oldOwner` or `prevOwner == oldOwner == SENTINEL_OWNERS`) and `oldOwner != SENTINEL_OWNERS`
+    andBool PREV_OWNER ==Int NEW_OWNER
 
 [removeOwner]
 k: (#execute => #halt) ~> _
