--- a/gnosis-imap/gnosis-imap-spec.ini
+++ b/gnosis-imap/gnosis-imap-spec.ini
@@ -279,8 +279,6 @@ proxy_storage:
                                #hashedLocation({COMPILER}, {OWNERS}, NEW_OWNER),    INIT_NEW_OWNER)
     => M2:IMap
 +requires:
-    ; address public constant SENTINEL_OWNERS = address(0x1);
-    andBool SENTINEL ==Int 1
     ; Range
     andBool #rangeAddress(  MSG_SENDER)
     andBool #rangeAddress(  PREV_OWNER)
@@ -290,7 +288,6 @@ proxy_storage:
     andBool #rangeAddress(  INIT_OLD_OWNER)
     andBool #rangeAddress(  INIT_NEW_OWNER)
 ensures:
-   ensures true
    andBool M1 ==IMap M2 except (
         SetItem(#hashedLocation({COMPILER}, {OWNERS}, NEW_OWNER))
         SetItem(#hashedLocation({COMPILER}, {OWNERS}, PREV_OWNER))
@@ -307,12 +304,12 @@ log: _:List ( .List => ListItem(#abiEventLog(#PROXY_ID, "RemovedOwner", #address
     ; requirements from code
     ; Owner address cannot be null.
     andBool NEW_OWNER =/=Int 0
-    andBool NEW_OWNER =/=Int SENTINEL
+    andBool NEW_OWNER =/=Int #SENTINEL
     ; No duplicate owners allowed.
     andBool INIT_NEW_OWNER ==Int 0
     ; Validate oldOwner address and check that it corresponds to owner index
     andBool OLD_OWNER =/=Int 0
-    andBool OLD_OWNER =/=Int SENTINEL
+    andBool OLD_OWNER =/=Int #SENTINEL
     andBool INIT_PREV_OWNER ==Int OLD_OWNER
     ; path condition
     ; All owners are different
@@ -320,7 +317,6 @@ log: _:List ( .List => ListItem(#abiEventLog(#PROXY_ID, "RemovedOwner", #address
     andBool PREV_OWNER =/=Int NEW_OWNER  // implied from `owners[prevOwner] == oldOwner != address(0)` and `owners[newOwner] == address(0)`
     andBool OLD_OWNER  =/=Int NEW_OWNER  // implied from `owners[prevOwner] == oldOwner` (implying `owners[oldOwner] != address(0)`) and `owners[newOwner] == address(0)`
 +ensures:
-   ensures true
    andBool select(M2, #hashedLocation({COMPILER}, {OWNERS}, PREV_OWNER))   ==Int NEW_OWNER
    andBool select(M2, #hashedLocation({COMPILER}, {OWNERS}, OLD_OWNER))    ==Int 0
    andBool select(M2, #hashedLocation({COMPILER}, {OWNERS}, NEW_OWNER))    ==Int INIT_OLD_OWNER
@@ -341,48 +337,52 @@ log: _
     ; requirements from code won't hold
     ; Owner address cannot be null.
     andBool (NEW_OWNER ==Int 0
-    orBool NEW_OWNER ==Int SENTINEL
+    orBool NEW_OWNER ==Int #SENTINEL
     ; No duplicate owners allowed.
     orBool INIT_NEW_OWNER =/=Int 0
     ; Validate oldOwner address and check that it corresponds to owner index
     orBool OLD_OWNER ==Int 0
-    orBool OLD_OWNER ==Int SENTINEL)
+    orBool OLD_OWNER ==Int #SENTINEL)
+
+[swapOwner-failure-2-b]
++requires:
+    ; Property to verify
+    andBool MSG_SENDER ==Int #PROXY_ID
+    ; Owner address cannot be null.
+    andBool NEW_OWNER =/=Int 0
+    andBool NEW_OWNER =/=Int #SENTINEL
+    ; No duplicate owners allowed.
+    andBool INIT_NEW_OWNER ==Int 0
+    ; Validate oldOwner address and check that it corresponds to owner index
+    andBool OLD_OWNER =/=Int 0
+    andBool OLD_OWNER =/=Int #SENTINEL
+    ; requirements from code won't hold
+    andBool INIT_PREV_OWNER =/=Int OLD_OWNER
 
 [swapOwner-failure-2-b-1]
 +requires:
-    ; Property to verify
-    andBool MSG_SENDER ==Int #PROXY_ID
-    ; requirements from code won't hold
-    ; Owner address cannot be null.
-    andBool NEW_OWNER =/=Int 0
-    andBool NEW_OWNER =/=Int SENTINEL
-    ; No duplicate owners allowed.
-    andBool INIT_NEW_OWNER ==Int 0
-    ; Validate oldOwner address and check that it corresponds to owner index
-    andBool OLD_OWNER =/=Int 0
-    andBool OLD_OWNER =/=Int SENTINEL
-    andBool INIT_PREV_OWNER =/=Int OLD_OWNER
-    ; testing
-    andBool PREV_OWNER =/=Int OLD_OWNER  // implied from `owners[prevOwner] == oldOwner` (implying `prevOwner != oldOwner` or `prevOwner == oldOwner == SENTINEL_OWNERS`) and `oldOwner != SENTINEL_OWNERS`
+    ; path conditions
     andBool PREV_OWNER =/=Int NEW_OWNER
+    andBool PREV_OWNER =/=Int OLD_OWNER
 
 [swapOwner-failure-2-b-2]
 +requires:
-    ; Property to verify
-    andBool MSG_SENDER ==Int #PROXY_ID
-    ; requirements from code won't hold
-    ; Owner address cannot be null.
-    andBool NEW_OWNER =/=Int 0
-    andBool NEW_OWNER =/=Int SENTINEL
-    ; No duplicate owners allowed.
-    andBool INIT_NEW_OWNER ==Int 0
-    ; Validate oldOwner address and check that it corresponds to owner index
-    andBool OLD_OWNER =/=Int 0
-    andBool OLD_OWNER =/=Int SENTINEL
-    andBool INIT_PREV_OWNER =/=Int OLD_OWNER
-    ; testing
-    ;andBool PREV_OWNER ==Int OLD_OWNER  // implied from `owners[prevOwner] == oldOwner` (implying `prevOwner != oldOwner` or `prevOwner == oldOwner == SENTINEL_OWNERS`) and `oldOwner != SENTINEL_OWNERS`
+    ; path conditions
+    andBool PREV_OWNER =/=Int NEW_OWNER
+    andBool PREV_OWNER ==Int OLD_OWNER
+    andBool INIT_OLD_OWNER =/=Int PREV_OWNER // implied from PREV_OWNER = OLD_OWNER and OLD_OWNER != SENTINEL
+
+[swapOwner-failure-2-b-3]
++requires:
+    ; path conditions
     andBool PREV_OWNER ==Int NEW_OWNER
+    andBool PREV_OWNER =/=Int OLD_OWNER
+
+[swapOwner-failure-2-b-4]
++requires:
+    ; path conditions
+    andBool PREV_OWNER ==Int NEW_OWNER
+    andBool PREV_OWNER ==Int OLD_OWNER
 
 [removeOwner]
 k: (#execute => #halt) ~> _
