--- a/gnosis-imap/gnosis-imap-spec.ini
+++ b/gnosis-imap/gnosis-imap-spec.ini
@@ -71,7 +71,7 @@ proxy_storage:
 +requires:
     andBool POS ==Int 2
 
-; todo SIG_LEN is not necessarily multiple of 65.
+; [todo] SIG_LEN is not necessarily multiple of 65.
 ; function checkSignatures(bytes32 dataHash, bytes data, bytes signatures, bool consumeHash)
 [checkSignatures]
 output: _ => _
